--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
   },
   "dependencies": {
+    "@prisma/client": "^4.0.0",
     "@remix-run/node": "^1.6.3",
     "@remix-run/react": "^1.6.3",
     "@remix-run/vercel": "^1.6.3",
