--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "sideEffects": false,
   "scripts": {
     "build": "npm run build:css && remix build",
-    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
+    "build:css": "npx tailwindcss -m -i ./styles/app.css -o app/styles/app.css --minify",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
+    "dev:css": "npx tailwindcss -w -i ./styles/app.css -o app/styles/app.css --watch"
   },
   "dependencies": {
     "@prisma/client": "^4.0.0",
@@ -13,6 +13,7 @@
     "@remix-run/react": "^1.6.3",
     "@remix-run/vercel": "^1.6.3",
     "@vercel/node": "^1.15.2",
+    "bcryptjs": "^2.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -20,6 +21,7 @@
     "@remix-run/dev": "^1.6.3",
     "@remix-run/eslint-config": "^1.6.3",
     "@remix-run/serve": "^1.6.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "autoprefixer": "^10.4.7",
