--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build": "npm run build:css && remix build",
     "build:css": "npx tailwindcss -m -i ./styles/app.css -o app/styles/app.css --minify",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "npx tailwindcss -w -i ./styles/app.css -o app/styles/app.css --watch"
-  },
+    "dev:css": "npx tailwindcss -w -i ./styles/app.css -o app/styles/app.css --watch",
+  "format": "prettier --write 'app/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"},
   "dependencies": {
     "@prisma/client": "^4.0.0",
     "@remix-run/node": "^1.6.3",
@@ -27,7 +27,11 @@
     "autoprefixer": "^10.4.7",
     "concurrently": "^7.2.2",
     "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "prisma": "^4.0.0",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.6.4"
