--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build:css": "npx tailwindcss -m -i ./styles/app.css -o app/styles/app.css --minify",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "npx tailwindcss -w -i ./styles/app.css -o app/styles/app.css --watch",
-  "format": "prettier --write 'app/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"},
+    "format": "prettier --write app/**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc"
+  },
   "dependencies": {
     "@prisma/client": "^4.0.0",
     "@remix-run/node": "^1.6.3",
